add express to handle test

--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "node-ai",
   "version": "1.0.0",
-  "description": "",
+  "description": "Simple AI using nodejs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "brain.js": "^1.6.1"
+    "brain.js": "^1.6.1",
+    "express": "^4.17.1"
   }
 }
